; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/local/extr_19585.c_search_mem.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/local/extr_19585.c_search_mem.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @search_mem(i32* %0, i8* %1, i8* %2, i8 zeroext %3, i8 zeroext %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i8, align 1
  %11 = alloca i8, align 1
  %12 = alloca i8*, align 8
  %13 = alloca i32, align 4
  store i32* %0, i32** %7, align 8
  store i8* %1, i8** %8, align 8
  store i8* %2, i8** %9, align 8
  store i8 %3, i8* %10, align 1
  store i8 %4, i8* %11, align 1
  %14 = load i8*, i8** %8, align 8
  store i8* %14, i8** %12, align 8
  br label %15

15:                                               ; preds = %62, %5
  %16 = load i8*, i8** %12, align 8
  %17 = load i8*, i8** %9, align 8
  %18 = icmp ult i8* %16, %17
  br i1 %18, label %19, label %65

19:                                               ; preds = %15
  %20 = load i8*, i8** %12, align 8
  %21 = load i8, i8* %20, align 1
  %22 = zext i8 %21 to i32
  %23 = load i8, i8* %10, align 1
  %24 = zext i8 %23 to i32
  %25 = icmp eq i32 %22, %24
  br i1 %25, label %26, label %61

26:                                               ; preds = %19
  %27 = load i8*, i8** %12, align 8
  %28 = getelementptr inbounds i8, i8* %27, i64 1
  %29 = load i8, i8* %28, align 1
  %30 = zext i8 %29 to i32
  %31 = load i8, i8* %11, align 1
  %32 = zext i8 %31 to i32
  %33 = icmp eq i32 %30, %32
  br i1 %33, label %34, label %61

34:                                               ; preds = %26
  %35 = load i8*, i8** %12, align 8
  %36 = ptrtoint i8* %35 to i32
  store i32 %36, i32* %13, align 4
  %37 = load i32, i32* %13, align 4
  %38 = and i32 %37, 255
  %39 = icmp eq i32 %38, 0
  br i1 %39, label %40, label %41

40:                                               ; preds = %34
  br label %62

41:                                               ; preds = %34
  %42 = load i32, i32* %13, align 4
  %43 = lshr i32 %42, 8
  %44 = and i32 %43, 255
  %45 = icmp eq i32 %44, 0
  br i1 %45, label %46, label %47

46:                                               ; preds = %41
  br label %62

47:                                               ; preds = %41
  %48 = load i32, i32* %13, align 4
  %49 = lshr i32 %48, 16
  %50 = and i32 %49, 255
  %51 = icmp eq i32 %50, 0
  br i1 %51, label %52, label %53

52:                                               ; preds = %47
  br label %62

53:                                               ; preds = %47
  %54 = load i32, i32* %13, align 4
  %55 = lshr i32 %54, 24
  %56 = and i32 %55, 255
  %57 = icmp eq i32 %56, 0
  br i1 %57, label %58, label %59

58:                                               ; preds = %53
  br label %62

59:                                               ; preds = %53
  %60 = load i32, i32* %13, align 4
  store i32 %60, i32* %6, align 4
  br label %66

61:                                               ; preds = %26, %19
  br label %62

62:                                               ; preds = %61, %58, %52, %46, %40
  %63 = load i8*, i8** %12, align 8
  %64 = getelementptr inbounds i8, i8* %63, i32 1
  store i8* %64, i8** %12, align 8
  br label %15

65:                                               ; preds = %15
  store i32 0, i32* %6, align 4
  br label %66

66:                                               ; preds = %65, %59
  %67 = load i32, i32* %6, align 4
  ret i32 %67
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
